# ezcollect

./: .gitignore  CMakeLists.txt
appimage/: AppImageBuilder-aarch64.yml  AppImageBuilder.yml  build-appimage.sh
src/: CMakeLists.txt  alias.h  env.h  ezcollect.cc  instance_manager.cc  instance_manager.h  log.h  metrics.cc  metrics.h  procfs.cc  procfs.h  record.cc  record.h  summarize.cc  summarize.h  utils.h
src/plugin/: CMakeLists.txt  example.cc  nl_task_stats.cc  nl_task_stats.h  plugin.cc  plugin.h  schedstat.cc  taskstats.cc
tools/: build.sh  resolve_ldd.py
